--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
     "require": {
         "php": ">=7.0.0",
         "laravel/framework": "5.5.*",
+        "laravel/tinker": "~1.0",
         "lucid-arch/laravel-foundation": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "zircote/swagger-php": "1.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
